@@ -1,5 +1,5 @@
 /* Target machine description for VxWorks sparc's, for GDB, the GNU debugger.
-   Copyright 1993 Free Software Foundation, Inc.
+   Copyright 1993, 1999 Free Software Foundation, Inc.
    Contributed by Cygnus Support.
 
 This file is part of GDB.
@@ -18,11 +18,8 @@ You should have received a copy of the GNU General Public License
 along with this program; if not, write to the Free Software
 Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.  */
 
-#define	GDBINIT_FILENAME	".vxgdbinit"
-
-#define	DEFAULT_PROMPT		"(vxgdb) "
-
 #include "sparc/tm-spc-em.h"
+#include "tm-vxworks.h"
 
 /* FIXME: These are almost certainly wrong. */
 
